@@ -1,9 +1,11 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.2 2005-06-17 22:02:28 achu Exp $
+## $Id: Makefile.am,v 1.3 2005-06-17 22:58:30 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
 
 SUBDIRS = cerebro \
 	  cerebro_error \
-	  common
+	  common \
+	  headers \
+	  include
