@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.2 2005-06-17 22:02:28 achu Exp $
+## $Id: Makefile.am,v 1.3 2005-06-17 22:58:30 achu Exp $
 ##*****************************************************************************
 
 if WITH_GNU_LD
@@ -10,23 +10,13 @@ endif
 noinst_HEADERS	       = cerebro_api.h \
 			 cerebro_clusterlist_util.h \
 			 cerebro_config_util.h \
-			 cerebro_metric_protocol.h \
 			 cerebro_module_clusterlist.h \
 			 cerebro_module_config.h \
 			 cerebro_module_metric.h \
 			 cerebro_module_monitor.h \
 			 cerebro_module_util.h \
 			 cerebro_nodelist_util.h \
-			 cerebro_util.h \
-			 cerebrod_heartbeat_protocol.h
-
-include_HEADERS        = cerebro.h
-nobase_include_HEADERS = cerebro/cerebro_clusterlist_module.h \
-			 cerebro/cerebro_config.h \
-			 cerebro/cerebro_config_module.h \
-			 cerebro/cerebro_constants.h \
-			 cerebro/cerebro_metric_module.h \
-			 cerebro/cerebro_monitor_module.h
+			 cerebro_util.h
 
 cerebro_clusterlist_module_builddir=`cd $(top_builddir)/src/modules/clusterlist && pwd`
 cerebro_config_module_builddir=`cd $(top_builddir)/src/modules/config && pwd`
@@ -40,7 +30,8 @@ libcerebro_la_CFLAGS  = -D_REENTRANT \
 			-DCEREBRO_METRIC_MODULE_BUILDDIR=\"$(cerebro_metric_module_builddir)\" \
 			-DCEREBRO_MONITOR_MODULE_BUILDDIR=\"$(cerebro_monitor_module_builddir)\" \
 			-I$(srcdir)/../common \
-			-I$(srcdir)/../cerebro_error
+			-I$(srcdir)/../headers \
+			-I$(srcdir)/../include
 libcerebro_la_SOURCES = cerebro.c \
 			cerebro_clusterlist_util.c \
 			cerebro_config_util.c \
