@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.2 2005-06-17 22:22:33 achu Exp $
+## $Id: Makefile.am,v 1.3 2005-06-17 22:58:30 achu Exp $
 ##*****************************************************************************
 
 if WITH_GNU_LD
@@ -7,11 +7,10 @@ CEREBRO_ERROR_VERSION_SCRIPT = $(srcdir)/cerebro_error.map
 CEREBRO_ERROR_OTHER_FLAGS = -Wl,--version-script=$(CEREBRO_ERROR_VERSION_SCRIPT)
 endif
 
-nobase_include_HEADERS      = cerebro/cerebro_error.h
-
 lib_LTLIBRARIES             = libcerebro_error.la
 libcerebro_error_la_CFLAGS  = -D_REENTRANT \
-			      -I$(srcdir)/../common
+			      -I$(srcdir)/../common \
+			      -I$(srcdir)/../include
 libcerebro_error_la_SOURCES = cerebro_error.c
 libcerebro_error_la_LDFLAGS = -version-info @LIBCEREBRO_ERROR_VERSION_INFO@ \
 			      $(CEREBRO_ERROR_OTHER_FLAGS)
