@@ -1,0 +1,6 @@
+##*****************************************************************************
+## $Id: Makefile.am,v 1.1 2005-06-17 22:58:30 achu Exp $
+##*****************************************************************************
+
+noinst_HEADERS = cerebro_metric_protocol.h \
+		 cerebrod_heartbeat_protocol.h
