@@ -1,0 +1,12 @@
+##*****************************************************************************
+## $Id: Makefile.am,v 1.1 2005-06-17 22:58:30 achu Exp $
+##*****************************************************************************
+
+include_HEADERS        = cerebro.h
+nobase_include_HEADERS = cerebro/cerebro_clusterlist_module.h \
+			 cerebro/cerebro_config.h \
+			 cerebro/cerebro_config_module.h \
+			 cerebro/cerebro_constants.h \
+			 cerebro/cerebro_error.h \
+			 cerebro/cerebro_metric_module.h \
+			 cerebro/cerebro_monitor_module.h
