@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.5 2005-06-17 22:22:33 achu Exp $
+## $Id: Makefile.am,v 1.6 2005-06-17 22:58:30 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -21,8 +21,7 @@ MODULE_FLAGS = -module -avoid-version
 cerebro_metric_boottime_la_SOURCES = cerebro_metric_boottime.c
 cerebro_metric_boottime_la_LDFLAGS = $(MODULE_FLAGS) \
 			             $(METRIC_OTHER_FLAGS)
-cerebro_metric_boottime_la_CFLAGS  = -I$(srcdir)/../../libs/cerebro \
-				     -I$(srcdir)/../../libs/cerebro_error	
+cerebro_metric_boottime_la_CFLAGS  = -I$(srcdir)/../../libs/include
 
 force-dependency-check:
 
