@@ -2,11 +2,14 @@
 
 	* Minor cleanup.
 
-	* Significant libcerebro code cleanup.
+	* Significant libcerebro code cleanup, module library code split
+	up.
 
 	* tagged pre-library-reorg-1
 
-	* library code reorg, new libcerebro_error library
+ 	* Library reorganization.
+
+	* New libcerebro_error library.
 	
 2005-06-16  Albert Chu  <chu11@llnl.gov>
 
